# CS2860-Project

./: .gitignore  Communication_Under_Delayed_Liveness.pptx  Communication_Under_Delayed_Liveness_SPEAKER_SCRIPT.md  OVERVIEW.md  README.md  REPRODUCE.md  preliminary_report.tex  pyproject.toml
Planning/: ExperimentPlan.md  Future.md  Important.md  MechanismSpec.md  Tasks.md
docs/: INTENT_GROUNDED_COMM.md  INTENT_GROUNDED_RESULTS.md  PRESENTATION_CONTEXT.md  PROGRESS_REPORT.md  algorithmic_contrast_rial_mappo_hrl.tex
envs/: sample_envs.py
matrix_results/: README.md  diagnosis_all.txt  research_presentation_summary.md
matrix_results/diagnostics_v1_sam/: README.md  hrl_diagnostics_README.md  summary.json
matrix_results/exp_matrix/: manifest.json
matrix_results/exp_pilot_v3/: manifest.json
matrix_results/exp_pilot_v4/: manifest.json
matrix_results/exp_pilot_v4_pooled/: pooled_manifest.json
matrix_results/exp_pilot_v4_sam/: manifest.json
matrix_results/intent_grounded_v1_analysis/: aggregate_summary.csv  per_run_summary.csv  summary.json
matrix_results/intent_grounded_v1_t25_analysis/: aggregate_summary.csv  per_run_summary.csv  summary.json
matrix_results/intent_grounded_v1_targeted_analysis/: PAPER_ANALYSIS.md  README.md  aggregate_summary.csv  paper_analysis_summary.json  paper_per_seed_table.csv  per_run_summary.csv  (+3 more)
overleaf_submission/: preliminary_report.tex
policies/: __init__.py  demo_rware_dropout.py  logger.py  summarize_runs.py  train.py
scripts/: make_demo_gif.py  run_headroom_v1_pk.sh  run_intent_grounded_v1.py  run_overnight_v1.py
(+1772 files in other folders)
